fixes background boxes at mobile view using z-index

--- a/themes/ecofair-theme/sass/_footer.scss
+++ b/themes/ecofair-theme/sass/_footer.scss
@@ -81,6 +81,7 @@
       .social-info-class,
       .banner-widgets {
         display: flex;
+        justify-content: flex-end;
         padding-top: 1rem;
         margin: 0rem;
         .social-icons {
